# secure_pass

./: .gitignore  Readme.rst  requirements.txt  setup.cfg  setup.py
secure_pass/: __init__.py  automation.py
