[metadata]
name = secure_pass
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Secure password manager
description-file = Readme.rst
home-page = https://github.com/XayOn/secure-pass
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only


keywords =
    password_management
    gnupg

[files]
packages =
    secure_pass

[entry_points]
console_scripts =
    secure_pass = secure_pass:main

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
